// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Render: after append child 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [],
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "_removeView": [Function],
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
      Object {
        "addCssFile": [Function],
        "cssFile": "mycssfile",
        "mergeInto": undefined,
        "parentNode": [Circular],
        "renderedComponent": VNode {
          "attributes": undefined,
          "children": Array [],
          "key": undefined,
          "nodeName": "page",
        },
        "text": "Hi",
      },
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [],
      "key": undefined,
      "nodeName": "page",
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": "page",
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;

exports[`Basic Render: after parent remove 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [],
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "_removeView": [Function],
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [],
      "key": undefined,
      "nodeName": "page",
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": "page",
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;

exports[`Basic Render: after remove child 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [],
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "_removeView": [Function],
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [],
      "key": undefined,
      "nodeName": "page",
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": "page",
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;

exports[`Basic Render: after render 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [],
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "_removeView": [Function],
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [],
      "key": undefined,
      "nodeName": "page",
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": "page",
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;
